S13P11A302-252 feat: 오류 수정 및 로그인 회원의 모든 비디오 조회 설정 완료